done css layout for further filter logic

--- a/force-app/main/default/classes/OrderManagementController.cls
+++ b/force-app/main/default/classes/OrderManagementController.cls
@@ -4,9 +4,11 @@ public with sharing class OrderManagementController {
     public static wrapInitData getInitData(Id recordId) {
         Account accById = getAccountById(recordId);
         Boolean isManager = isManager();
+        List<Product__c> products = getProducts();
         wrapInitData accWrapper = new wrapInitData();
         accWrapper.currentAccount = accById;
         accWrapper.isManager = isManager;
+        accWrapper.products = products;
         return accWrapper;
     }
 
@@ -21,10 +23,15 @@ public with sharing class OrderManagementController {
     public class wrapInitData {
         @AuraEnabled public Account currentAccount {get; set;}
         @AuraEnabled public Boolean isManager {get; set;}
+        @AuraEnabled public List<Product__c> products {get; set;}
     }
 
     @AuraEnabled
     public static void createProduct(String productName, String productType, String productDescription, String productFamily, String productImage) {
         ProductService.createProduct(productName, productType, productDescription, productFamily, productImage);
+    }
+
+    public static List<Product__c> getProducts() {
+        return [SELECT Id, Name, Description__c FROM Product__c LIMIT 50000];
     }
 }
