added filter details to  UI

--- a/force-app/main/default/classes/OrderManagementController.cls
+++ b/force-app/main/default/classes/OrderManagementController.cls
@@ -5,10 +5,14 @@ public with sharing class OrderManagementController {
         Account accById = getAccountById(recordId);
         Boolean isManager = isManager();
         List<Product__c> products = getProducts();
+        List<String> productTypes = getProductTypes();
+        List<String> productFamilies = getProductFamilies();
         wrapInitData accWrapper = new wrapInitData();
         accWrapper.currentAccount = accById;
         accWrapper.isManager = isManager;
         accWrapper.products = products;
+        accWrapper.productTypes = productTypes;
+        accWrapper.productFamilies = productFamilies;
         return accWrapper;
     }
 
@@ -24,6 +28,8 @@ public with sharing class OrderManagementController {
         @AuraEnabled public Account currentAccount {get; set;}
         @AuraEnabled public Boolean isManager {get; set;}
         @AuraEnabled public List<Product__c> products {get; set;}
+        @AuraEnabled public List<String> productTypes {get; set;}
+        @AuraEnabled public List<String> productFamilies {get; set;}
     }
 
     @AuraEnabled
@@ -33,5 +39,27 @@ public with sharing class OrderManagementController {
 
     public static List<Product__c> getProducts() {
         return [SELECT Id, Name, Description__c FROM Product__c LIMIT 50000];
+    }
+
+    public static List<String> getProductTypes() {
+        List<String> productTypes = new List<String>();
+        Schema.DescribeFieldResult field = Product__c.Type__c.getDescribe();
+
+        for (Schema.PicklistEntry fieldItem : field.getPicklistValues()) {
+            productTypes.add(fieldItem.getLabel());
+        }
+
+        return productTypes;
+    }
+
+    public static List<String> getProductFamilies() {
+        List<String> productFamilies = new List<String>();
+        Schema.DescribeFieldResult field = Product__c.Family__c.getDescribe();
+
+        for (Schema.PicklistEntry fieldItem : field.getPicklistValues()) {
+            productFamilies.add(fieldItem.getLabel());
+        }
+
+        return productFamilies;
     }
 }
